/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Main.java to edit this template
 */
package eva2_11_interface;

/**
 *
 * @author elvat
 */
public class EVA2_11_INTERFACE {

    /**
     * @param args the command line arguments
     */
    public static void main(String[] args) {
        // TODO code application logic here
        Persona persona = new Persona();
        persona.mostrarMensaje();
        Mensaje msj = new Mensaje();
    }
    
}
